llib_LIBRARIES = liblua.a

liblua_a_SOURCES = LuaScript.cpp

liblua_a_SOURCES += LuaSrc/lapi.c

liblua_a_SOURCES += LuaSrc/lcode.c

liblua_a_SOURCES += LuaSrc/ldebug.c

liblua_a_SOURCES += LuaSrc/ldo.c

liblua_a_SOURCES += LuaSrc/ldump.c

liblua_a_SOURCES += LuaSrc/lfunc.c

liblua_a_SOURCES += LuaSrc/lgc.c

liblua_a_SOURCES += LuaSrc/llex.c

liblua_a_SOURCES += LuaSrc/lmem.c

liblua_a_SOURCES += LuaSrc/lobject.c

liblua_a_SOURCES += LuaSrc/lopcodes.c

liblua_a_SOURCES += LuaSrc/lparser.c

liblua_a_SOURCES += LuaSrc/lstate.c

liblua_a_SOURCES += LuaSrc/lstring.c

liblua_a_SOURCES += LuaSrc/ltable.c

liblua_a_SOURCES += LuaSrc/ltests.c

liblua_a_SOURCES += LuaSrc/ltm.c

liblua_a_SOURCES += LuaSrc/lua.c

liblua_a_SOURCES += LuaSrc/lundump.c

liblua_a_SOURCES += LuaSrc/lvm.c

liblua_a_SOURCES += LuaSrc/lzio.c

liblua_a_SOURCES += LuaSrc/lauxlib.c

liblua_a_SOURCES += LuaSrc/lbaselib.c

liblua_a_SOURCES += LuaSrc/ldblib.c

liblua_a_SOURCES += LuaSrc/liolib.c

liblua_a_SOURCES += LuaSrc/lmathlib.c

liblua_a_SOURCES += LuaSrc/loadlib.c

liblua_a_SOURCES += LuaSrc/lstrlib.c

liblua_a_SOURCES += LuaSrc/ltablib.c


INCLUDES = -I./
INCLUDES += -I./LuaSrc/
INCLUDES += -I../../Share/Header/
INCLUDES += -I../../Share/Header/Base/
INCLUDES += -I../../Share/Header/Server/
INCLUDES += -I../../Share/Header/GameServer/
llibdir=../../Share/llib/