llib_LIBRARIES = libcommon.a

libcommon_a_SOURCES = ../common.cpp

libcommon_a_SOURCES += ../RingBuffer/RingBuffer.cpp

libcommon_a_SOURCES += ../Thread/Thread.cpp

libcommon_a_SOURCES += ../Network/Client/Client.cpp

libcommon_a_SOURCES += ../Network/conn_info/conn_info.cpp

libcommon_a_SOURCES += ../Network/Server/Server.cpp

libcommon_a_SOURCES += ../FileReader/KDebug.cpp

libcommon_a_SOURCES += ../FileReader/KFile.cpp

libcommon_a_SOURCES += ../FileReader/KFilePath.cpp

libcommon_a_SOURCES += ../FileReader/KIniFile.cpp

libcommon_a_SOURCES += ../FileReader/KLinkArray.cpp

libcommon_a_SOURCES += ../FileReader/KMemBase.cpp

libcommon_a_SOURCES += ../FileReader/KMemClass.cpp

libcommon_a_SOURCES += ../FileReader/KMemStack.cpp

libcommon_a_SOURCES += ../FileReader/KPakFile.cpp

libcommon_a_SOURCES += ../FileReader/KStrBase.cpp

libcommon_a_SOURCES += ../FileReader/KTabFile.cpp

libcommon_a_SOURCES += ../Daemon/Daemon.cpp

libcommon_a_SOURCES += ../FileLog/FileLog.cpp


INCLUDES = -I../
INCLUDES += -I../LuaLib/LuaSrc/
INCLUDES += -I../../Share/Header/
INCLUDES += -I../../Share/Header/Base/
INCLUDES += -I../../../Share/Header/Server/
INCLUDES += -I../../../Share/Header/GameServer/
llibdir=../../Share/llib/




